feature-templates/nCino/dataset/01yO3G1U-Product Hierarchy/.store/metadata/objects/Account.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Form_W8_NFFE_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It indicates whether the beneficial owner is the NFFE corporation in question, or the affiliate of said corporation, as prescribed and certified by IRS forms W-8.</description>
        <inlineHelpText>Indicates whether the beneficial owner is the NFFE corporation in question, or the affiliate of said corporation, as prescribed and certified by IRS forms W-8.</inlineHelpText>
        <label>Form W8 NFFE Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Publicly-Traded NFFE (not an affiliate)</fullName>
                </value>
                <value>
                    <fullName>Affiliate of Publicly-Traded NFFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Owner_Trust_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. It indicates the beneficial owner certifies it is an owner-documented FFI that is also a Trust without contingent or other unidentified beneficiaries, as prescribed by IRS forms W-8.</description>
        <inlineHelpText>Indicates the beneficial owner certifies it is an owner-documented FFI that is also a Trust without contingent or other unidentified beneficiaries, as prescribed by IRS forms W-8.</inlineHelpText>
        <label>Form W8 Owner Trust Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Owner_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It specifies the type of owner (or &apos;Chapter 3 Status&apos;) that is listed on the applicable IRS Form W-8 (e.g., W-8BEN-E, Certificate of Foreign Status of Beneficial Owner - Entity). Note that for several types there are two options distinguishing between hybri...</description>
        <inlineHelpText>Specifies the type of owner (or &apos;Chapter 3 Status&apos;) that is listed on the applicable IRS Form W-8.</inlineHelpText>
        <label>Form W8 Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Disregarded Entity (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Partnership (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Simple Trust (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Grantor Trust (non-hybrid)</fullName>
                </value>
                <value>
                    <fullName>Complex Trust</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Central Bank of Issue</fullName>
                </value>
                <value>
                    <fullName>Tax-exempt Organization</fullName>
                </value>
                <value>
                    <fullName>Private Foundation</fullName>
                </value>
                <value>
                    <fullName>Disregarded Entity (hybrid/treaty claim)</fullName>
                </value>
                <value>
                    <fullName>Partnership (hybrid/treaty claim)</fullName>
                </value>
                <value>
                    <fullName>Simple Trust (hybrid/treaty claim)</fullName>
                </value>
                <value>
                    <fullName>Grantor Trust (hybrid/treaty claim)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Reference_Number_Description__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It describes any reference numbers that will be useful to the withholding agent while processing the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>Describes any reference numbers that will be useful to the withholding agent while processing the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Reference Number Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Restricted_Distributor_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It indicates the distribution agreement type for the Restricted Distributor, which must contain either (1) previous as well as current US sales prohibitions; or (2) only current US sales prohibitions coupled with preexisting account review, as the...</description>
        <inlineHelpText>Indicates type of distribution agreement type for the Restricted Distributor.</inlineHelpText>
        <label>Form W8 Restricted Distributor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous and Current US Sales Prohibition</fullName>
                </value>
                <value>
                    <fullName>Current Prohibition Plus Preexisting Accounts Review Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Security_Market_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It contains the name of the securities market (or the name of one such securities market, if more than one) upon which the publicly-traded NFFE corporation&apos;s stock is regularly traded.</description>
        <inlineHelpText>The name of the securities market (or the name of one such securities market, if more than one) upon which the publicly-traded NFFE corporation&apos;s stock is regularly traded.</inlineHelpText>
        <label>Form W8 Security Market Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Signer_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. It identifies an individual signer for a (non-US) entity who can (and will certify that they can) sign Forms W-8 on behalf of the entity.</description>
        <inlineHelpText>Identifies an individual signer for a (non-US) entity who can (and will certify that they can) sign Forms W-8 on behalf of the entity.</inlineHelpText>
        <label>Form W8 Signer Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Special_Claim_Rate__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the percentage rate of withholding on the specific type of income on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>The percentage rate of withholding on the specific type of income on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Special Claim Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Special_Claim_Reason__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It describes the reason the owner meets the terms of the treaty article on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>Describes the reason the owner meets the terms of the treaty article on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Special Claim Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Special_Income_Description__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It describes the type of income the owner is using to claim treaty benefits on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>Describes the type of income the owner is using to claim treaty benefits on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
        <label>Form W8 Special Income Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Sponsor_Entity_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the name of the sponsoring entity for the beneficial owner that is one of the following: (a) a sponsored Foreign Financial Institution (FII) without a GIIN number, OR (b) a certified deemed- compliant closely held investment vehicle, or (c) a sponsored direct reporting NFFE, as these entities are defined by IRS forms W-8.</description>
        <inlineHelpText>The name of the sponsoring entity for the beneficial owner, these entities are defined by IRS forms W-8.</inlineHelpText>
        <label>Form W8 Sponsor Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Sponsored_FFI_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The beneficial owner is a sponsored Foreign Financial Institution (FII) without a GIIN number prior to 1/1/16 for purposes of IRS forms W-8 and certifies either (1) that it is an FFI only because it is an investment entity and has an agreement for sponsorship; or (2) that it is a controlled foreign corporation &apos;as defined by section 957(a).&apos;</description>
        <inlineHelpText>The beneficial owner is a sponsored Foreign Financial Institution (FII) without a GIIN number prior to 1/1/16 for purposes of IRS forms W-8</inlineHelpText>
        <label>Form W8 Sponsored FFI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FFI Investment Entity</fullName>
                </value>
                <value>
                    <fullName>FFI Foreign Section 957a Corporation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Start_Up_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the date the start-up company was formed (or date of board resolution approving the new line of business).</description>
        <inlineHelpText>The date the start-up company was formed (or date of board resolution approving the new line of business).</inlineHelpText>
        <label>Form W8 Start Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Treaty_Limitation_Provision_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the owner is not an individual derives the income for which the treaty benefits are claimed and if applicable meets the requirements of the treaty provision dealing with limitation on benefits. It is form-specific for the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>If true the owner is not an individual derives the income for which the treaty benefits are claimed.</inlineHelpText>
        <label>Form W8 Treaty Limitation Provision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Treaty_Qualified_Resident_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the owner is not an individual claiming treaty benefits for dividends received from a foreign corporation or interest from a US trade or business of a foreign corporation and meets qualified resident status. It is form-specific for the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>If true the owner is not an individual is claiming treaty benefits for dividends.</inlineHelpText>
        <label>Form W8 Treaty Qualified Resident Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W9_Seperat_TIN_Certification_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, a separate TIN certification (i.e. a W-9) is desired.</description>
        <inlineHelpText>If true a separate TIN certification (i.e. a W-9) is desired.</inlineHelpText>
        <label>Form W9 Seperat TIN Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__GIIN__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The GIIN of the disregarded entity account holder. (Global Intermediary Identification Number, a 19-digit number assigned to certain entities and used by a financial institution to identify itself to withholding agents and tax administrations for FATCA reporting.)</description>
        <inlineHelpText>The GIIN of the disregarded entity account holder. (Global Intermediary Identification Number.)</inlineHelpText>
        <label>GIIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Cash_Flow__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is used to demonstrate the owner&apos;s total monthly cash flow. Calculated automatically. Global CF = ((NOI) + (Spouse Salary if spouse is guarantor) + (Other Income)).</description>
        <label>Global Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Governing_Law_State__c</fullName>
        <description>Governing Law State</description>
        <inlineHelpText>The governing law state of the trust.</inlineHelpText>
        <label>Governing Law State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>North Dakota</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest_Risk_Grade__c</fullName>
        <description>This field is optional. This field is manually populated. This field is used to store the highest decisioned risk grade of all loans where this relationship is an entity.</description>
        <inlineHelpText>This field is automatically filled with the highest risk grade loan associated to this account</inlineHelpText>
        <label>Risk Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Indirect_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Indirect Exposure to this Relationship or Account.</description>
        <inlineHelpText>Indirect Exposure</inlineHelpText>
        <label>Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populate this lookup field to define the Institution to which an account belongs.</description>
        <inlineHelpText>Manually populate this lookup field to define the Institution to which an account belongs.</inlineHelpText>
        <label>Institution</label>
        <referenceTo>LLC_BI__Institution__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interim_Statement__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify an end date of the most recent interim financial statement.</description>
        <label>Interim Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Individual__c</fullName>
        <description>This field is a formula field that assists in specifying if the account is an individual account.</description>
        <formula>IF(OR(ISPICKVAL(Type, &apos;Sole Proprietorship&apos;),ISPICKVAL(Type, &apos;Individual&apos;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Institution_Affiliated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators or users manually select this optional checkbox to indicate affiliation with the financial institution. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox to indicate affiliation with the financial institution.</inlineHelpText>
        <label>Is Institution Affiliated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Non_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users populate this optional boolean field on the relationship when the added entity is a third party. By default, this field is false.</description>
        <inlineHelpText>Select this checkbox when the added entity is a third-party entity.</inlineHelpText>
        <label>Is Non-Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Exposure_Calc_Date__c</fullName>
        <description>This date/time field automatically populates via the system. This field specifies the most recent date and time for a given exposure calculation. Default is null.</description>
        <label>Last Exposure Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Review_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is the date of the last review.</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Site_Visit__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of last site visit to this Relationship or Account.</description>
        <label>Last Site Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Limited_Liability_Management_Type__c</fullName>
        <description>Users manually populate this optional text field. This field is used to specify whether the Limited Liability Company is operated by members or managers.</description>
        <label>Limited Liability Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Managed</fullName>
                </value>
                <value>
                    <fullName>Manager Managed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field can be used to specify the loan name that is associated to the account.</description>
        <label>Loan Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Numbers__c</fullName>
        <description>This is a hidden field that stores the loan numbers that the relationship has. Used in some reports, alerts, etc. ( to be deprecated)</description>
        <label>-D Loan Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MLA_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when creating or updating a relationship.</description>
        <inlineHelpText>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when creating or updating a relationship.</inlineHelpText>
        <label>MLA Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Management_Experience__c</fullName>
        <description>This field is no longer used.</description>
        <inlineHelpText>Management Experience the individual has in their industry - expressed in Years.</inlineHelpText>
        <label>Management Experience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NaicsDesc__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. NaicsDesc Description is utilized in lieu of the Data.com field.</description>
        <inlineHelpText>NaicsDesc Description utilized in lieu of Data.com field</inlineHelpText>
        <label>NaicsDesc</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Naics_Code__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This text field is used to capture the NAICS code for the relationship.</description>
        <label>NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Review_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the date of the next required review.</description>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Signers__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the number of authorized signers related to this account/relationship.</description>
        <label>Number of Signers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NumberofLocations__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the number of locations for this Relationship or Account.</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Partnership_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the partnership type for this account.</description>
        <label>Partnership Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Personal_Fin_Statements__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of most recent Personal Financial Statement on file.</description>
        <label>Personal Fin Statements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Personal_Liquidity__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the owner&apos;s Personal and Business Liquidity as shown on most recent Personal Financial Statement.</description>
        <label>Pers. &amp; Bus. Liquidity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Personal_Tax_Return__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of the most recent Personal Tax Return (PTR).</description>
        <label>Personal Tax Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Phone_Number_Type__c</fullName>
        <description>This field is not required and is manually populated. This field defines the type of phone number entered in the &quot;Phone&quot; field on the Account object.</description>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Pod__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the lending team associated with this Relationship or Account. The value provided must match one of the values in the POD list established for this organization.</description>
        <label>Pod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dogwood</fullName>
                </value>
                <value>
                    <fullName>Cypress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Financial_Account_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the holder of the account will certify that they have previously had a transaction account at a financial institution within the last 12 months.</description>
        <inlineHelpText>If true the holder of the account will certify that they have previously had a transaction account at a financial institution within the last 12 months.</inlineHelpText>
        <label>Previous Financial Account Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Financial_Institution_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the name of the previous financial institution of the account holder.</description>
        <inlineHelpText>The name of the previous financial institution of the account holder.</inlineHelpText>
        <label>Previous Financial Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Affiliated Exposure to this Relationship or Account.</description>
        <label>Proposed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Direct_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Direct Exposure to this Relationship or Account.</description>
        <inlineHelpText>Proposed Direct Exposure</inlineHelpText>
        <label>Proposed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Indirect_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Indirect Exposure to this Relationship or Account.</description>
        <inlineHelpText>Proposed Indirect Exposure</inlineHelpText>
        <label>Proposed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_O_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is manually populated by a user. When the value of the field is set to true, the sharing setting of this Relationship is affected to restrict read/write access. This field is used to indicate that the relationship is subject to Regulation O standards. If Checked, the relationship is regulation O.</description>
        <inlineHelpText>This field should be checked if Regulation O applies to this Relationship</inlineHelpText>
        <label>Reg O Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Region__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to segment Relationships or Accounts. The value provided must match one of the values in the Region list established for this organization.</description>
        <inlineHelpText>Custom field to segment Accounts by Region</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Class__c</fullName>
        <description>This is an optional field. It is manually populated. It indicates the rate class for a relationship and is used in tandem with the Rate_Class field on the Bill_Point object to determine pricing for a relationship for proforma calculations.</description>
        <label>Relationship Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Number__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is used specifically for mass emails to customers so we can easily create isolated risks (for example, email relationships 0 - 100).</description>
        <label>Relationship Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue_Growth__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to display the most recent year-over-year revenue growth as a percent.</description>
        <inlineHelpText>Expressed as a percent</inlineHelpText>
        <label>Revenue Growth %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>